	  <freedesktop -at- snorc -dot- org>)
	* Add licence headers to files missing them
	* Fix minor bug in AbstractConnection.java (reported by Frank Benoit
	  <benoit -at- tionex -dot- de>
	* Make Marshalling more verbose and descriptive in the presence of
	  mismatched parameter lists (suggested by Anibal Sanchez
	  <anibal -dot- sanchez -at- sunya -dot- com -dot- ar>)

Version 2.3.1:
	
	* Fix regression in normal array handling (spotted by Anibal Sanchez
	  <anibal -dot- sanchez -at- sunya -dot- com -dot- ar>)

Version 2.3:

	* Apply recursive-path patch for DBusViewer (written by Zsombor Gegesy
	  <gzsombor -at- gmail -dot- com>)
	* Add Class-Path to jar manifests
	* Update documentation for nested classes
	* Documentation build fix
	* Add test for arrays-of-structs
	* Fix arrays-of-structs bug (spotted by Daniel Machado
	  <cdanielmachado -at- gmail -dot- com>)
	* Fix bashism in Makefile
	* add DBusInterfaceName annotation to override the Java interface name as
	  the name exported on the bus.

Version 2.2:

	* Fix cross-test to pass.
	* Fix DBusViewer.sh *again* (Spotted by Serkan Kaba <serkan_kaba
			-at- yahoo -dot- com>)
	* Add DBusCall
	* fix CreateInterface to put DBusException in the right package in import
		statements. Spotted by Steve Crane <Steve -dot- Crane -at- rococosoft
		-dot- com>
	* Update Cross-test to new spec
	* Change casting and return types for get{Peer,}RemoteObject calls to 
	  use generics so you don't need explicit casts on return types.
	  Suggested by Philippe Marschall <philippe -dot- marschall -at- gmail
	  -dot- com>.
	* Test with multiple requested (same actual) connection
	* Add async-with-callback API.

Version 2.1:

	* make scripts with $JAVA
	* fix DBusViewer.sh (Spotted by Luigi Paioro <luigi -at- lambrate -dot-
			inaf -dot- it>

Version 2.0:
	
	* Remove libdbus-1 dependency and talk the wire protocol directly
	* Add dependency on http://www.matthew.ath.cx/projects/java/ unix, debug
     and hexdump libraries